change the group_name and event_name query parameter names
