# app-modules/api/src/Http/Controllers/EventApiV1Controller.php
@@ -37,11 +37,11 @@ class EventApiV1Controller extends Controller
                     $query->whereIn('id', $request->input('tags'));
                 });
             })
-            ->when($request->filled('event_name'), function (Builder $query) use ($request) {
-                $query->where('event_name', 'like', '%' . $request->input('event_name') . '%');
+            ->when($request->filled('name'), function (Builder $query) use ($request) {
+                $query->where('event_name', 'like', '%' . $request->input('name') . '%');
             })
-            ->when($request->filled('group_name'), function (Builder $query) use ($request) {
-                $query->where('group_name', 'like', '%' . $request->input('group_name') . '%');
+            ->when($request->filled('org_name'), function (Builder $query) use ($request) {
+                $query->where('group_name', 'like', '%' . $request->input('org_name') . '%');
             })
             ->when($request->filled('service'), function (Builder $query) use ($request) {
                 $query->where('service', $request->input('service'));
