# storage/app/scribe/openapi.yaml
@@ -61,29 +61,29 @@ paths:
                   type: object
                 example:
                   -
-                    event_name: 'Repudiandae minima nihil officia rerum.'
-                    group_name: 'Prof. Kristopher Wyman tech group'
-                    group_url: id
-                    url: 'http://www.hane.com/nobis-non-ullam-consequatur-cumque-dignissimos-dolore-deleniti-aut'
-                    time: '2025-07-10T13:58:46.000000Z'
+                    event_name: 'Error beatae quasi labore officiis.'
+                    group_name: 'Lavon Runolfsson tech group'
+                    group_url: in
+                    url: 'http://www.morar.com/itaque-minima-dolore-aspernatur-voluptates-et-culpa-dolores.html'
+                    time: '2025-07-11T13:12:29.000000Z'
                     tags: ''
                     status: past
-                    rsvp_count: 46
-                    description: 'Dolor beatae tempora repellendus id esse deserunt eum. Non voluptas excepturi sint est sint.'
-                    uuid: 07be1d27-e496-3bf5-8dfb-66fbd0c1aa8e
-                    data_as_of: '2025-07-10T13:58:46.773713Z'
+                    rsvp_count: 96
+                    description: 'Beatae quidem beatae quidem tempore cupiditate. Consequatur nobis exercitationem asperiores.'
+                    uuid: 904f42e9-7232-3ff7-a707-fc85c75fe580
+                    data_as_of: '2025-07-11T13:12:29.449833Z'
                     service_id: '6'
                     service: eventbrite
                     venue:
-                      name: 'sit minima ipsam illum velit'
-                      address: "62317 Randy Highway Apt. 908\nSchimmelview, IN 12817"
-                      city: Verniceland
-                      state: Sint.
-                      zip: 88022-5153
-                      country: NP
-                      lat: '-81.888645'
-                      lon: '-144.166307'
-                    created_at: '2025-07-10T13:58:46.000000Z'
+                      name: 'necessitatibus neque occaecati voluptas voluptatem'
+                      address: "980 Senger Centers\nLuettgenstad, NC 43966"
+                      city: 'Lake Myrtie'
+                      state: Et.
+                      zip: '34409'
+                      country: TF
+                      lat: '-3.223772'
+                      lon: '-35.570917'
+                    created_at: '2025-07-11T13:12:29.000000Z'
                     is_paid: null
       tags:
         - Endpoints
@@ -116,21 +116,21 @@ paths:
                   type: object
                 example:
                   -
-                    title: voluptates
-                    path: 'http://goyette.com/occaecati-nam-sed-cumque-eveniet-amet-consequatur.html'
-                    changed: '2025-07-10T13:58:46.000000Z'
-                    field_city: Rippintown
+                    title: non
+                    path: 'http://www.weimann.com/dolor-ad-cumque-temporibus-beatae'
+                    changed: '2025-07-11T13:12:29.000000Z'
+                    field_city: Anahaven
                     field_event_service: null
                     field_events_api_key: null
-                    field_focus_area: aut
-                    field_homepage: quisquam
-                    field_event_calendar_homepage: 'http://www.prosacco.info/ut-facere-blanditiis-dignissimos-est-omnis'
-                    field_primary_contact_person: assumenda
+                    field_focus_area: et
+                    field_homepage: dolorem
+                    field_event_calendar_homepage: 'http://weimann.com/illum-et-ab-dolores-ipsum-ad.html'
+                    field_primary_contact_person: voluptates
                     field_org_status: active
-                    field_organization_type: numquam
+                    field_organization_type: rerum
                     field_year_established: 2025
                     field_org_tags: ''
-                    uuid: 117
+                    uuid: 75
       tags:
         - Endpoints
       security: []
@@ -200,24 +200,24 @@ paths:
               type: integer
         -
           in: query
-          name: event_name
-          description: 'Filter events by event name. Must not be greater than 255 characters.'
+          name: name
+          description: 'Filter events by event name (the "event_name" property). Must not be greater than 255 characters.'
           example: null
           required: false
           schema:
             type: string
-            description: 'Filter events by event name. Must not be greater than 255 characters.'
+            description: 'Filter events by event name (the "event_name" property). Must not be greater than 255 characters.'
             example: null
             nullable: true
         -
           in: query
-          name: group_name
-          description: 'The name of the group associated with the event. Must not be greater than 255 characters.'
+          name: org_name
+          description: 'The name of the organization associated with the event (the "group_name" property). Must not be greater than 255 characters.'
           example: null
           required: false
           schema:
             type: string
-            description: 'The name of the group associated with the event. Must not be greater than 255 characters.'
+            description: 'The name of the organization associated with the event (the "group_name" property). Must not be greater than 255 characters.'
             example: null
             nullable: true
         -
@@ -335,12 +335,12 @@ paths:
                       name: 'Dolorum amet iste laborum eius est dolor.'
                       description: 'Consequatur debitis et id. Qui id totam temporibus quia ipsam.'
                       url: 'http://www.huels.org/dignissimos-error-sit-labore-quos.html'
-                      starts_at: '2025-07-10T13:58:46.000000Z'
-                      ends_at: '2025-07-12T09:53:21.000000Z'
+                      starts_at: '2025-07-11T13:12:29.000000Z'
+                      ends_at: '2025-07-13T09:07:04.000000Z'
                       rsvp_count: 97
                       status: past
                       organization:
-                        id: 118
+                        id: 76
                         name: 'Nash Corwin tech group'
                         url: doloribus
                         tags: []
@@ -359,8 +359,8 @@ paths:
                       service:
                         name: eventbrite
                         id: '6'
-                      created_at: '2025-07-10T13:58:46.000000Z'
-                      updated_at: '2025-07-10T13:58:46.000000Z'
+                      created_at: '2025-07-11T13:12:29.000000Z'
+                      updated_at: '2025-07-11T13:12:29.000000Z'
                       is_paid: null
                 properties:
                   data:
@@ -371,12 +371,12 @@ paths:
                         name: 'Dolorum amet iste laborum eius est dolor.'
                         description: 'Consequatur debitis et id. Qui id totam temporibus quia ipsam.'
                         url: 'http://www.huels.org/dignissimos-error-sit-labore-quos.html'
-                        starts_at: '2025-07-10T13:58:46.000000Z'
-                        ends_at: '2025-07-12T09:53:21.000000Z'
+                        starts_at: '2025-07-11T13:12:29.000000Z'
+                        ends_at: '2025-07-13T09:07:04.000000Z'
                         rsvp_count: 97
                         status: past
                         organization:
-                          id: 118
+                          id: 76
                           name: 'Nash Corwin tech group'
                           url: doloribus
                           tags: []
@@ -395,8 +395,8 @@ paths:
                         service:
                           name: eventbrite
                           id: '6'
-                        created_at: '2025-07-10T13:58:46.000000Z'
-                        updated_at: '2025-07-10T13:58:46.000000Z'
+                        created_at: '2025-07-11T13:12:29.000000Z'
+                        updated_at: '2025-07-11T13:12:29.000000Z'
                         is_paid: null
                     items:
                       type: object
@@ -415,10 +415,10 @@ paths:
                           example: 'http://www.huels.org/dignissimos-error-sit-labore-quos.html'
                         starts_at:
                           type: string
-                          example: '2025-07-10T13:58:46.000000Z'
+                          example: '2025-07-11T13:12:29.000000Z'
                         ends_at:
                           type: string
-                          example: '2025-07-12T09:53:21.000000Z'
+                          example: '2025-07-13T09:07:04.000000Z'
                         rsvp_count:
                           type: integer
                           example: 97
@@ -430,7 +430,7 @@ paths:
                           properties:
                             id:
                               type: integer
-                              example: 118
+                              example: 76
                             name:
                               type: string
                               example: 'Nash Corwin tech group'
@@ -487,10 +487,10 @@ paths:
                               example: '6'
                         created_at:
                           type: string
-                          example: '2025-07-10T13:58:46.000000Z'
+                          example: '2025-07-11T13:12:29.000000Z'
                         updated_at:
                           type: string
-                          example: '2025-07-10T13:58:46.000000Z'
+                          example: '2025-07-11T13:12:29.000000Z'
                         is_paid:
                           type: string
                           example: null
@@ -655,7 +655,7 @@ paths:
                 example:
                   data:
                     -
-                      id: 119
+                      id: 77
                       title: minus
                       path: 'http://reichel.info/'
                       city: 'Lake Robynland'
@@ -669,14 +669,14 @@ paths:
                       organization_type: perferendis
                       established_year: 2025
                       tags: []
-                      created_at: '2025-07-10T13:58:46.000000Z'
-                      updated_at: '2025-07-10T13:58:46.000000Z'
+                      created_at: '2025-07-11T13:12:29.000000Z'
+                      updated_at: '2025-07-11T13:12:29.000000Z'
                 properties:
                   data:
                     type: array
                     example:
                       -
-                        id: 119
+                        id: 77
                         title: minus
                         path: 'http://reichel.info/'
                         city: 'Lake Robynland'
@@ -690,14 +690,14 @@ paths:
                         organization_type: perferendis
                         established_year: 2025
                         tags: []
-                        created_at: '2025-07-10T13:58:46.000000Z'
-                        updated_at: '2025-07-10T13:58:46.000000Z'
+                        created_at: '2025-07-11T13:12:29.000000Z'
+                        updated_at: '2025-07-11T13:12:29.000000Z'
                     items:
                       type: object
                       properties:
                         id:
                           type: integer
-                          example: 119
+                          example: 77
                         title:
                           type: string
                           example: minus
@@ -739,10 +739,10 @@ paths:
                           example: []
                         created_at:
                           type: string
-                          example: '2025-07-10T13:58:46.000000Z'
+                          example: '2025-07-11T13:12:29.000000Z'
                         updated_at:
                           type: string
-                          example: '2025-07-10T13:58:46.000000Z'
+                          example: '2025-07-11T13:12:29.000000Z'
       tags:
         - Endpoints
       security: []
